# tauri-dumper

./: .gitignore  Cargo.toml  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: build-release.yml  ci.yml  release.yml
scripts/: download-fixtures.sh
src/: asset.rs  cli.rs  codec.rs  dumper.rs  error.rs  export.rs  extract.rs  image.rs  lib.rs  main.rs  manifest.rs  repack.rs
src/binary/: android_elf.rs  elf.rs  macho.rs  mod.rs  pe.rs
tests/: cli.rs  extract_fixtures.rs  integration_test.rs  repack.rs
tests/common/: mod.rs
tests/fixtures/: fixtures.toml
xtask/: Cargo.toml
xtask/src/: main.rs
